--- a/src/app/components/lista-adquisiciones/modal-producto-adquisicion/modal-producto-adquisicion.component.html
+++ b/src/app/components/lista-adquisiciones/modal-producto-adquisicion/modal-producto-adquisicion.component.html
@@ -44,7 +44,7 @@
         </mat-form-field>
       </div>
     </div>
-{{this. formProducto.getRawValue() | json}}
+<!-- {{this. formProducto.getRawValue() | json}} -->
   </mat-dialog-content>
 
   <mat-dialog-actions align="end">
