--- a/src/app/components/lista-fabricantes/modal-fabricante/modal-fabricante.component.html
+++ b/src/app/components/lista-fabricantes/modal-fabricante/modal-fabricante.component.html
@@ -12,7 +12,7 @@
     <div class="mt-4 flex flex-col gap-2  m-2">
       <div class="flex flex-col lg:flex-row md:flex-row sm:gap-4">
         <mat-form-field class="flex-auto">
-          <mat-label>Razón social</mat-label>
+          <mat-label>Fabricante</mat-label>
           <input type="text" matInput formControlName="nombre" maxlength="2000">
           <mat-error *ngIf="this.nombre.hasError('required')"> El campo es requerido</mat-error>
         </mat-form-field>
