--- a/src/app/components/lista-cliente/modal-cliente-catalogo/modal-cliente-catalogo.component.html
+++ b/src/app/components/lista-cliente/modal-cliente-catalogo/modal-cliente-catalogo.component.html
@@ -10,7 +10,7 @@
       <mat-icon svgIcon="mat:close"></mat-icon>
     </button>
   </div>
-  <mat-divider class="-mx-6 text-border"></mat-divider>
+  <mat-divider class="mx-6 text-border"></mat-divider>
   <mat-dialog-content class="p-1">
     <div class="mt-4 flex flex-col gap-2  m-2">
       <div class="flex flex-col lg:flex-row md:flex-row sm:gap-4">
